# lqr_local_planner_plugin

./: CMakeLists.txt  lqr_local_planner.xml  package.xml
config/: lqr_local_planner.yaml
design/: lqr_control.plantuml  setPlan.plantuml
include/lqr_local_planner/: lqr_local_planner.hpp
src/: lqr_local_planner.cpp
